--- a/WeirdCars/src/Components/Card.css
+++ b/WeirdCars/src/Components/Card.css
@@ -4,7 +4,7 @@
     padding: 2.5em 3.75em;
     box-sizing: border-box;
     width: 80vw;
-    margin: auto;
+    margin:40px auto;
     box-shadow: 0 0 10px 0 gray;
     border-radius: 10px;
 
