--- a/WeirdCars/src/Page/Products.css
+++ b/WeirdCars/src/Page/Products.css
@@ -14,3 +14,13 @@
     font-weight: 700;
     border-radius: 5px;
 }
+.filterbox{
+    /* border: 2px solid black; */
+    padding: 0 50px;
+    text-align:end;
+}
+.Filter{
+    /* border: 2px solid red; */
+    padding: 10px;
+    border-radius: 5px;
+}
