--- a/WeirdCars/src/Components/Login.css
+++ b/WeirdCars/src/Components/Login.css
@@ -28,3 +28,7 @@
         font-weight: 800;
         border-radius:5px ;
     }
+    .loginheading{
+        text-align: center;
+        margin: 10px;
+    }
